# pylife

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
game_of_life_cli/: __main__.py
pylife/: __main__.py
python_game_of_life/: __main__.py
